--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          no_output_timeout: 30m
           command: |
             git clone https://github.com/paritytech/polkadot.git &&
             cd polkadot/ &&
