--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,9 @@ jobs:
           command: |
             git clone https://github.com/paritytech/polkadot.git &&
             cd polkadot/ &&
-            docker build -t web3f/staking-miner -f /root/project/scripts/staking-miner.Dockerfile . &&
+            docker build -t web3f/staking-miner:${CIRCLE_SHA1} -f /root/project/scripts/staking-miner.Dockerfile . &&
             docker login -u ${DOCKER_USER} -p "${DOCKER_PASSWORD}" ${DOCKER_REGISTRY} &&
-            docker push web3f/staking-miner:latest
+            docker push web3f/staking-miner:${CIRCLE_SHA1}
 
   publishImage:
     docker:
