--- a/charts/staking-miner/templates/deployment.yaml
+++ b/charts/staking-miner/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       - name: {{ .Release.Name }}
         image: {{ .Values.image.repo }}:{{ .Values.image.tag | default .Chart.AppVersion }}
         imagePullPolicy: IfNotPresent
-        args: ["staking-miner","dry-run"]
+        args: {{ .Values.args }}
         env:
         - name: RUST_LOG
           value: info
