--- a/charts/staking-miner/templates/deployment.yaml
+++ b/charts/staking-miner/templates/deployment.yaml
@@ -20,7 +20,10 @@ spec:
       - name: {{ .Release.Name }}
         image: {{ .Values.image.repo }}:{{ .Values.image.tag | default .Chart.AppVersion }}
         imagePullPolicy: IfNotPresent
-        args: {{ .Values.args }}
+        args: 
+          {{  range .Values.arguments }}
+            - {{ . }}
+          {{ end }}
         env:
         - name: RUST_LOG
           value: info
